--- a/css/content.css
+++ b/css/content.css
@@ -3,7 +3,7 @@ main {
   max-width: 1259px;
 }
 
-content {
+#content {
   margin-top: 53px;
   padding: 20px 20px 20px 240px;
   display: grid;
@@ -13,7 +13,7 @@ content {
   grid-row-gap: 1.5em;
 }
 
-card {
+article {
   display: flex;
   flex-direction: row;
   border-radius: 10px;
@@ -24,7 +24,7 @@ card {
   overflow: hidden;
 }
 
-card:hover {
+article:hover {
   transform: translateY(-1.5px);
   box-shadow: 0 15px 45px -10px rgba(70, 69, 69, .3);
 }
@@ -36,15 +36,18 @@ card:hover {
   background-position: 50% 50%;
 }
 
-.post-img-first {
-  background-image: url(/assets/blogpost-first.png);
+.post-img img {
+  width: 100%;
+  height: 100%;
 }
 
-content a {
+#content a {
   text-decoration: none;
 }
 
 .post-header {
+  font-size: 28px;
+  font-weight: bold;
   color: #131313;
   display: -webkit-box;
   word-break: break-all;
@@ -53,6 +56,11 @@ content a {
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 5px;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  font-family: inherit;
+  outline: none;
 }
 
 .post-content {
@@ -70,14 +78,14 @@ content a {
 }
 
 @media (max-width:1024px) {
-  content {
+  #content {
     padding: 20px 20px 20px 240px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 1em;
   }
 
-  card {
+  article {
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -115,7 +123,7 @@ content a {
 }
 
 @media (max-width: 768px) {
-  content {
+  #content {
     padding: 0px 20px 20px 20px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
@@ -125,7 +133,7 @@ content a {
 }
 
 @media (max-width: 480px) {
-  content {
+  #content {
     padding: 0px 20px 20px 20px;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
