--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -18,7 +18,7 @@ main {
 .blog-img {
   height: 50vh;
   width: 100%;
-  background-image: url(/assets/blogpost-first.png);
+  background-image: url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2852&q=80');
   background-size: cover;
   background-position: 50% 50%;
 }
